apps/staging/helloweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb-service
spec:
  type: ClusterIP
  selector:
    app: helloweb
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
