apps/staging/helloweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb-ingress
spec:
  ingressClassName: apisix
  tls:
    - hosts:
        - helloweb.glegal.local
      secretName: hello-cert
  rules:
    - host: helloweb.glegal.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloweb-service
                port:
                  number: 8080
